--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "https://one-dashboard-be-784b7694ba8f.herokuapp.com"
 }
